--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,69 +8,51 @@
     tools:context=".HomeFragment">
 
 
-    <!--    <com.google.android.material.card.MaterialCardView-->
-    <!--        android:id="@+id/cardViewHome"-->
-    <!--        android:layout_width="match_parent"-->
-    <!--        android:layout_height="200dp"-->
-    <!--        android:layout_marginTop="8dp"-->
-    <!--        app:cardCornerRadius="5dp"-->
-    <!--        app:cardElevation="5dp"-->
-    <!--        app:layout_constraintEnd_toEndOf="parent"-->
-    <!--        app:layout_constraintHorizontal_bias="0.828"-->
-    <!--        app:layout_constraintStart_toStartOf="parent"-->
-    <!--        app:layout_constraintTop_toTopOf="parent">-->
-
-    <!--        <LinearLayout-->
-    <!--            android:layout_width="match_parent"-->
-    <!--            android:layout_height="217dp"-->
-    <!--            android:background="@color/white"-->
-    <!--            android:elevation="20dp"-->
-    <!--            android:orientation="vertical"-->
-    <!--            android:padding="30dp">-->
 
 
-    <!--  -->
-    <!--        </LinearLayout>-->
-    <!--    </com.google.android.material.card.MaterialCardView>-->
-
-    <TableLayout
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/cardViewHome"
+        app:cardBackgroundColor="@color/white"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_centerHorizontal="true"
-        android:layout_margin="50dp"
-        android:background="@color/white"
-        android:stretchColumns="0,1,2">
+        android:layout_margin="30dp"
+        app:cardCornerRadius="5dp"
+        app:cardElevation="5dp"
+
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="10dp">
+            android:orientation="vertical"
+            android:padding="20dp"
+            >
 
-            <TextView
-                android:id="@+id/incomeLabel"
-                android:layout_width="wrap_content"
+            <RelativeLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="10dp"
-                android:text="@string/income"
-                android:textSize="24sp" />
+                android:orientation="horizontal"
+                android:padding="10dp">
 
-            <TextView
-                android:id="@+id/incomeAmount"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="48dp"
-                android:textSize="24sp" />
+                <TextView
+                    android:id="@+id/incomeLabel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:text="@string/income"
+                    android:textSize="24sp" />
+
+                <TextView
+                    android:id="@+id/incomeAmount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:textSize="24sp" />
 
 
-        </LinearLayout>
+            </RelativeLayout>
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="10dp">
-
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
@@ -80,6 +62,7 @@
                     android:id="@+id/billsLabel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
                     android:text="@string/bills"
                     android:textSize="24sp" />
 
@@ -87,18 +70,12 @@
                     android:id="@+id/billsAmount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="48dp"
+                    android:layout_alignParentRight="true"
                     android:textSize="24sp" />
 
-            </LinearLayout>
-        </TableRow>
+            </RelativeLayout>
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="10dp">
-
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
@@ -108,6 +85,7 @@
                     android:id="@+id/debtLabel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
                     android:text="@string/debt"
                     android:textAlignment="viewStart"
                     android:textSize="24sp" />
@@ -116,26 +94,21 @@
                     android:id="@+id/debtAmount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
                     android:textSize="24sp" />
 
-            </LinearLayout>
-        </TableRow>
+            </RelativeLayout>
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="10dp">
-
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
                 android:padding="10dp">
 
                 <TextView
                     android:id="@+id/savingsLabel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
                     android:text="@string/savings"
                     android:textSize="24sp" />
 
@@ -143,26 +116,21 @@
                     android:id="@+id/savingsAmount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
                     android:textSize="24sp" />
 
-            </LinearLayout>
-        </TableRow>
+            </RelativeLayout>
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="10dp">
-
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
                 android:padding="10dp">
 
                 <TextView
                     android:id="@+id/investmentsLabel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
                     android:text="@string/investments"
                     android:textSize="24sp" />
 
@@ -170,26 +138,21 @@
                     android:id="@+id/investmentsAmount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
                     android:textSize="24sp" />
 
-            </LinearLayout>
-        </TableRow>
+            </RelativeLayout>
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="10dp">
-
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
                 android:padding="10dp">
 
                 <TextView
                     android:id="@+id/otherLabel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
                     android:text="@string/other"
                     android:textSize="24sp" />
 
@@ -197,11 +160,13 @@
                     android:id="@+id/otherAmount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
                     android:textSize="24sp" />
-            </LinearLayout>
-        </TableRow>
 
-    </TableLayout>
+            </RelativeLayout>
+
+        </LinearLayout>
+    </com.google.android.material.card.MaterialCardView>
 
 
 </FrameLayout>
