--- a/app/src/main/res/layout/fragment_view_all.xml
+++ b/app/src/main/res/layout/fragment_view_all.xml
@@ -3,40 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingTop="90dp"
+    android:paddingBottom="40dp"
     tools:context=".ViewAllFragment">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-<!--        <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="horizontal">-->
-<!--            <TextView-->
-<!--                android:id="@+id/columnHeaderDate"-->
-<!--                android:textAlignment="center"-->
-<!--                android:text="@string/date"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_width="wrap_content"/>-->
-
-<!--            <TextView-->
-<!--                android:id="@+id/columnHeaderDescription"-->
-<!--                android:textAlignment="center"-->
-<!--                android:text="@string/description"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_width="wrap_content"/>-->
-
-
-<!--            <TextView-->
-<!--                android:id="@+id/columnHeaderAmount"-->
-<!--                android:textAlignment="center"-->
-<!--                android:text="@string/amount"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_width="wrap_content"/>-->
-
-
-<!--        </LinearLayout>-->
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/budgetRecView"/>
-    </LinearLayout>
+            android:layout_height="wrap_content"
+            android:paddingTop="30dp"
+            android:clipToPadding="false"
+            android:id="@+id/budgetRecView"
+            android:scrollbars="vertical"/>
 </FrameLayout>
