--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#A8A7A7</color>
+    <color name="red">#FF0000</color>
+    <color name="orange">#FE6E00</color>
 </resources>
