--- a/app/src/main/res/layout/fragment_view_all.xml
+++ b/app/src/main/res/layout/fragment_view_all.xml
@@ -3,13 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="90dp"
     android:paddingBottom="40dp"
     tools:context=".ViewAllFragment">
         <androidx.recyclerview.widget.RecyclerView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingTop="30dp"
+            android:layout_gravity="center_horizontal"
             android:clipToPadding="false"
             android:id="@+id/budgetRecView"
             android:scrollbars="vertical"/>
